--- a/backend/src/main/resources/templates/category.html
+++ b/backend/src/main/resources/templates/category.html
@@ -13,7 +13,7 @@
 <body>
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-        <img class="mx-3" src="https://www.baccredomatic.com/themes/custom/bac_theme/images/logo-small.png" alt="" width="70" height="55">
+		<img class="mx-3" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a4/Mastercard_2019_logo.svg/1200px-Mastercard_2019_logo.svg.png" alt="" width="90" height="50">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>      
