--- a/backend/src/main/resources/templates/categories.html
+++ b/backend/src/main/resources/templates/categories.html
@@ -33,36 +33,32 @@
 						<a class="nav-link" th:href="@{/users}">Users<span class="sr-only"></span></a>
 					</li>
 				</ul>
-				<!-- <form class="form-inline my-2 mx-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-          </form> -->
 				<div class="text-end">
 					<a type="button" class="btn btn-danger me-2" data-toggle="modal" data-target="#SignOff">Sing Off</a>
-					<!-- <a type="button" class="btn btn-danger me-2" th:href="@{/}">Login</a> -->
-					<!-- <a type="button" class="btn btn-danger" th:href="@{/register}">Sign Up</a> -->
 				</div>
 			</div>
 		</nav>
 	</header>
-	<main class="form-signin w-60 m-auto">
+	<main class="form-signin w-60 m-auto" id="main">
 		<div class="container mx-auto">
-			<form style="margin-top:7rem">
+			<form style="margin-top:7rem" v-on:submit.prevent="postCategory">
 				<div class="card mb-auto">
-					<div aria-controls="userForm" aria-expanded="false" class="card-header" data-target="#userForm"
-						data-toggle="collapse" style="cursor: pointer">
+					<div aria-controls="categoryForm" aria-expanded="false" class="card-header"
+						data-target="#categoryForm" data-toggle="collapse" style="cursor: pointer">
 						<div class="float-left">New/Edit Category</div>
 						<div class="float-right">▼</div>
 					</div>
-					<div class="card card-body collapse" id="userForm">
+					<div class="card card-body collapse" id="categoryForm">
 						<div class="form-group row">
 							<label for="name" class="col-sm-4 col-form-label">Name</label>
-							<input class="form-control col-sm-8" id="name" placeholder="First Name" type="text" />
+							<input id="id" type="hidden" v-model="category_id">
+							<input class="form-control col-sm-8" id="name" placeholder="Food" type="text" maxlength="50"
+								v-model="category_name" />
 						</div>
 						<div class="form-group row">
 							<label for="description" class="col col-sm-4">Description</label>
-							<input class="form-control col-sm-8" id="description" placeholder="Food Category"
-								type="text" />
+							<input class="form-control col-sm-8" id="description" placeholder="Food Category" maxlength="100"
+								type="text" v-model="category_description" />
 						</div>
 						<div class="form-group row">
 							<div class="col col-sm-4"></div>
@@ -74,22 +70,25 @@
 			</form>
 
 			<br><br>
-
+			<figure class="text-center">
+				<h2 class="h2">All Categories</h2>
+			</figure>
 			<table class="table table-striped table-bordered">
 				<thead>
 					<tr>
 						<th>Name</th>
 						<th>Description</th>
+						<th>Actions</th>
 					</tr>
 				</thead>
 				<tbody>
-					<tr v-for="user in users">
-						<td>{{ user.firstName }}</td>
-						<td>{{ user.lastName }}</td>
-						<td>{{ user.role.name }}</td>
+					<tr v-for="category in categories">
+						<td>{{ category.name }}</td>
+						<td>{{ category.description }}</td>
 						<td>
-							<button class="btn btn-primary" v-on:click="editUser(user)">Edit</button>
-							<button class="btn btn-danger" v-on:click="deleteUser(user)">Delete</button>
+							<button class="btn btn-warning" v-on:click="viewProdcuts(category)">View Products</button>
+							<button class="btn btn-primary" v-on:click="editCategory(category)">Edit</button>
+							<button class="btn btn-danger" v-on:click="deleteCategory(category)">Delete</button>
 						</td>
 					</tr>
 				</tbody>
@@ -117,6 +116,79 @@
 			</div>
 		</div>
 	</main>
+
+	<!-- Vue imports -->
+	<script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
+	<!-- Actual Vue.js script -->
+	<script>
+		var app = new Vue({
+			el: '#main',
+			data() {
+				return {
+					category_id: null,
+					category_name: null,
+					category_description: null,
+					categories: null,
+				}
+			},
+			mounted() {
+				this.getCategories();
+			},
+			methods: {
+				getCategories: function () {
+					axios
+						.get("/api/category/getAllCategories")
+						.then(response => (this.categories = response.data));
+				},
+				postCategory: function (event) {
+					// Creating
+					if (this.category_id == '' || this.category_id == null) {
+						axios
+							.post("/api/category/createCategory", {
+								"name": this.category_name,
+								"description": this.category_description,
+							})
+							.then(savedCategory => {
+								this.categories.push(savedCategory.data);
+								this.category_name = '';
+								this.category_description = '';
+								this.category_id = '';
+								this.getCategories();
+							})
+					} else { // Updating
+						axios
+							.put("/api/category/updateCategory/" + this.category_id, {
+								"name": this.category_name,
+								"description": this.category_description,
+							})
+							.then(savedCategory => {
+								this.getCategories();
+								this.category_name = '';
+								this.category_description = '';
+								this.category_id = '';
+							})
+					}
+				},
+				editCategory: function (category) {
+					this.category_id = category.id;
+					this.category_name = category.name;
+					this.category_description = category.description;
+					document.getElementById('categoryForm')
+						.setAttribute("class", document.getElementById('categoryForm').getAttribute("class") +
+							" show");
+				},
+				deleteCategory: async function (category) {
+					await axios
+						.delete("/api/category/deleteCategory/" + category.id);
+					this.getCategories();
+				}
+			}
+		})
+	</script>
+
+
 	<!-- JS, Popper.js, and jQuery -->
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
 		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
