--- a/backend/src/main/resources/templates/login.html
+++ b/backend/src/main/resources/templates/login.html
@@ -21,21 +21,10 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-          <!-- <li class="nav-item active">
-              <a class="nav-link" href="#">Categories <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Products<span class="sr-only"></span></a>
-            </li> -->
-        </ul>
-        <!-- <form class="form-inline my-2 mx-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-          </form> -->
+        <div class="navbar-nav mr-auto mt-2 mt-lg-0"/>
         <div class="text-end">
           <a type="button" class="btn btn-danger me-2" th:href="@{/}">Login</a>
-          <a type="button" class="btn btn-danger" th:href="@{/register}">Sign Up</a>
+          <a type="button" class="btn btn-danger" th:href="@{/register}">Register</a>
         </div>
       </div>
     </nav>
