--- a/backend/src/main/resources/templates/login.html
+++ b/backend/src/main/resources/templates/login.html
@@ -21,7 +21,9 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-        <div class="navbar-nav mr-auto mt-2 mt-lg-0"/>
+        <div class="navbar-nav mr-auto mt-2 mt-lg-0">
+
+        </div>
         <div class="text-end">
           <a type="button" class="btn btn-danger me-2" th:href="@{/}">Login</a>
           <a type="button" class="btn btn-danger" th:href="@{/register}">Register</a>
@@ -42,7 +44,7 @@
           <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
           <label for="floatingPassword">Password</label>
         </div>
-        <button class="w-100 btn btn-lg btn-danger" type="submit">Sign in</button>
+        <a class="w-100 btn btn-lg btn-danger" type="submit" th:href="@{/categories}">Sign in</a>
     </form>
     </div>
   </main>
